--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@ body{
   width: 40px !important;
   height: 40px !important;
   position: absolute;
-  left: 50px !important;
+  left: 70px !important;
   top: 40% !important;
   border: 1px solid #000;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
@@ -37,7 +37,7 @@ body{
   position: absolute;
   width: 40px !important;
   height: 40px !important;
-  right: 50px !important;
+  right: 70px !important;
   top: 40% !important;
   border: 1px solid #000;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
@@ -291,7 +291,7 @@ button{
   color: #fff;
 }
 
-.hover-animation img {
+.hover-animation object {
   position: absolute;
   left: 0;
   -webkit-transition: opacity 1s ease-in-out;
@@ -300,7 +300,7 @@ button{
   -o-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
 }
-.hover-animation img.img-front:hover{
+.hover-animation object.img-front:hover{
   opacity:0;
   cursor: pointer;
 }
@@ -346,12 +346,12 @@ right: 5%;
   display: flex;
 }
 /* hover effect for carousel images */
-.card img{
+.card object{
   transition: 0.6s ease-in-out;
   max-height: 100%;
 }
 
-.card:hover img{
+.card:hover object{
   transform: scale(1.03);
 }
 .card-body p{
