--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,6 +154,13 @@ body{
   color: #000;
   border-radius: 2px;
 }
+
+.btn-primary:disabled{
+  background: #eee;
+  color: gray;
+  outline: 1px solid #eee;
+  cursor: default;
+}
 .nav-item{
   font-size: 10px;
   padding: 0 6px;
@@ -256,6 +263,9 @@ button{
 }
 .input-border{
   border:  1px solid #000;
+}
+.input-error-border{
+  border:  1px solid red;
 }
 .input-border input{
   outline: none !important;
